{s[return_type]})

  File "<string>", line 7
    for s in sigs_old: print(f
                            ^
SyntaxError: '(' was never closed
